pages re env and adding environment yaml for binder

--- a/book/_toc.yml
+++ b/book/_toc.yml
@@ -8,3 +8,4 @@ chapters:
   - file: 01-intro/typewriter/index
   - file: 01-intro/coding_environment_i/index
   - file: 01-intro/coding_environment_ii/index
+  - file: 01-intro/coding_environment_iii/index
